--- a/FluentValidationPropertyTest/Pages/Shared/_Layout.cshtml
+++ b/FluentValidationPropertyTest/Pages/Shared/_Layout.cshtml
@@ -71,7 +71,8 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
